--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -11,3 +11,7 @@
 @mixin footerSocialImage($image, $x, $y) {
     background:$image $x $y;
 }
+
+@mixin heightCalculation($a, $b){
+    height: ($a + $b) / 2;
+}
